style.css
/* ... */
/**************************
MEDIA QUERIES
**************************/

@media screen and (min-width: 960px) {
	#wrapper {
		width:960px;
		margin:0px auto;
	}

	#page-wrap {
		width:960px;
		margin:0px auto;
	}

	nav#navContainer {
		width: 300px;
		height: 69px;
		margin: 0;
		float: left;
		padding: 15px 0px 0px 315px;
	}

	#logo {
		float:left;
		width:320px;
		height:84px;
		margin-left:0px;
	}

	#mainNav {
		font-size: 2em;
	}

	#mainNav li a {
		float:left;
	}

	#socialLinks {
		font-size: 2em;
		clear:both;
	}

	#socialLinks a {
		float:left;
	}

	.leftCol {
		width: 570px;
		height: 284px;
		background:url('images/linebig.png') no-repeat;
		margin: 10px auto;
		float:left;
		clear:left;
	}

	div.arrow {
		width:50px;
		height:160px;
		float:left;
		background: url('images/arrowweb2.png') no-repeat;
	}

	.rightCol {
		float:left;
		width:300px;
		padding-left:20px;
	}

	h2#listen {
		visibility: hidden;
	}

	#party {
		padding-top:100px;
		font-size: 4em;
	}

	#player {
	}

	nav#blogNavContainer {
		width:300px;
		margin: 2px auto;
		height:100%;
		line-height:0.7;
	}

	#blogMainNav {
		font-size: 2em;
		text-align:center;
	}

	#blogMainNav li {
		display:inline;
		text-align:center;
	}

	#blogSocialLinks {
		font-size: 2em;
		clear:both;
		text-align:center;
	}

	#blogSocialLinks li {
		display:inline;
	}

}

@media screen and (min-width: 640px) and (max-width: 960px){
	#wrapper {
		width:640px;
		margin:0px auto;
	}

	#page-wrap {
		width:640px;
		margin:0px auto;
	}

	nav#navContainer {
		width: 295px;
		height: 69px;
		margin: 0;
		float: left;
		padding: 15px 0px 0px 55px;
	}

	#logo {
		float:left;
		width:320px;
		height:84px;
		margin-left:-40px;
	}

	#mainNav {
		font-size: 2em;
	}

	#mainNav li a {
		float:left;
	}

	#socialLinks {
		font-size: 2em;
		clear:both;
	}

	#socialLinks a {
		float:left;
	}

	.leftCol {
		width: 270px;
		height: 134px;
		background:url('images/linesm.png') no-repeat;
		margin: 10px auto;
		float:left;
		clear:left;
		margin-top: 29px;
	}

	div.arrow {
		width:50px;
		height:160px;
		float:left;
		background: url('images/arrowweb2.png') no-repeat;
	}

	.rightCol {
		float:left;
		width:300px;
		padding-left:20px;
	}

	h2#listen {
		visibility: hidden;
	}

	#party {
		padding-top:103px;
		font-size: 4em;
		text-align: right;
	}

	#player {
	}

	nav#blogNavContainer {
		width:300px;
		margin: 2px auto;
		height:100%;
		line-height:0.7;
	}

	#blogMainNav {
		font-size: 2em;
		text-align:center;
	}

	#blogMainNav li {
		display:inline;
		text-align:center;
	}

	#blogSocialLinks {
		font-size: 2em;
		clear:both;
		text-align:center;
	}

	#blogSocialLinks li {
		display:inline;
	}
}

@media screen and (min-width: 480px) and (max-width: 640px){
	#wrapper {
		width:480px;
		margin:0px auto;
	}

	#page-wrap {
		width:480px;
		margin:0px auto;
	}

	nav#navContainer {
		width:300px;
		margin: 2px auto;
		height:100%;
		line-height:0.7;
	}

	#logo {
		margin: 0px auto;
	}

	#mainNav {
		font-size: 2em;
		text-align:center;
	}

	#mainNav li {
		display:inline;
		text-align:center;
	}

	#socialLinks {
		font-size: 2em;
		clear:both;
		text-align:center;
	}

	#socialLinks li {
		display:inline;
	}

	.leftCol {
		width: 0px;
		height: 0px;
	}

	.rightCol {
		width: 300px;
		margin: 2px auto;
	}

	h2#listen {
		clear:both;
		font-size: 3em;
		width:220px;
		margin: 0px auto 20px auto;
		padding-top:0px;
		font-family: 'Lobster13Regular', Georgia, serif;
		color:#FFF;
		text-align:center;
	}

	#party {
		visibility: hidden;
	}

	nav#blogNavContainer {
		width:300px;
		margin: 2px auto;
		height:100%;
		line-height:0.7;
		margin-top:22px;
	}

	#blogMainNav {
		font-size: 2em;
		text-align:center;
	}

	#blogMainNav li {
		display:inline;
		text-align:center;
	}

	#blogSocialLinks {
		font-size: 2em;
		clear:both;
		text-align:center;
	}

	#blogSocialLinks li {
		display:inline;
	}
}

@media screen and (max-width: 480px){

	#wrapper {
		width:320px;
		margin:0px auto;
	}

	#page-wrap {
		width:320px;
		margin:0px auto;
	}

	nav#navContainer {
		width:300px;
		margin: 2px auto;
		height:100%;
		line-height:0.7;
	}

	#logo {
		margin: 0px auto;
	}

	#mainNav {
		font-size: 2em;
		text-align:center;
	}

	#mainNav li {
		display:inline;
		text-align:center;
	}

	#socialLinks {
		font-size: 2em;
		clear:both;
		text-align:center;
	}

	#socialLinks li {
		display:inline;
	}

	.leftCol {
		width: 0px;
		height: 0px;
	}

	.rightCol {
		width: 300px;
		margin: 2px auto;
	}

	h2#listen {
		clear:both;
		font-size: 3em;
		width:220px;
		margin: 0px auto 20px auto;
		padding-top:0px;
		font-family: 'Lobster13Regular', Georgia, serif;
		color:#FFF;
		text-align:center;
	}

	#party {
		visibility: hidden;
	}

	nav#blogNavContainer {
		width:300px;
		margin: 2px auto;
		height:100%;
		line-height:0.7;
		margin-top:22px;
	}

	#blogMainNav {
		font-size: 2em;
		text-align:center;
	}

	#blogMainNav li {
		display:inline;
		text-align:center;
	}

	#blogSocialLinks {
		font-size: 2em;
		clear:both;
		text-align:center;
	}

	#blogSocialLinks li {
		display:inline;
	}

	#header {
		width:90%;
	}
}

/********************************
PAGE STYLES
********************************/

html {
	width: 100%;
	height: 100%;
	background: rgb(0,12,46);
}

body {

}

#page-wrap {
	background: url('images/btex.png');
	border-left: 2px dashed #FFF;
	border-right: 2px dashed #FFF;
}

h1 { }
h2 { 

}
h3 { }

#logo {
	width:320px;
	height: 84px;
	background: url('images/AMTP_logosmgr.png') no-repeat;
}

#logo h1 {
	visibility: hidden;
}

p { }

/********************************
LINKS AND NAV
********************************/

#socialLinks a {
	font-family: 'LeagueGothicRegular', Helvetica, sans-serif;
	text-decoration: none;
	color: #FFF;
	margin-left: 5px;
 }
#socialLinks a:hover { 
	text-decoration: none;
	color: rgb(157, 250, 0);

} 

a {
	font-family: 'LeagueGothicRegular', Helvetica, sans-serif;
	text-decoration: none;
	color: #FFF;
 }
/* ... */

